--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,15 +11,20 @@
       <%= check_box_tag "ratings[#{rating}]", "1",  @ratings_to_show.include?(rating), class: 'form-check-input' %>
     </div>
   <% end %>
+  <input name="sorting" type="hidden" value=<%= @sorting %>>
   <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
 <% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= "hilite bg-warning" if @sorting == "title" %>">
+        <%= link_to "Movie Title", movies_path({'sorting': 'title', 'ratings': Hash[@ratings_to_show.map {|rating| [rating,'1']}] }), id: "title_header" %>
+      </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= "hilite bg-warning" if @sorting == "date" %>">
+        <%= link_to "Release Date", movies_path({'sorting': 'date', 'ratings': Hash[@ratings_to_show.map {|rating| [rating,'1']}] }), id: "release_date_header" %>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
